# Videos

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  animations.py  brand.py  layout.py  manim.cfg  pyproject.toml  render_all.sh  typography.py
agents/: MASTER_PROMPT.md  README.md  add_a_scene.md  animation_presets.md  create_new_project.md  data_visualisation.md  render_and_export.md  standard_elements.md  typography.md  using_brand_colors.md
components/: __init__.py  bumper.py  chapter_card.py  closing.py  lower_thirds.py  octopus.py  opening.py  pause_ponder.py  subscribe_cta.py  watermark.py
docs/: octopus.md
examples/: 00_series_trailer.py  01_brand_and_typography.py  02_animations_and_layout.py  03_ml_components.py  04_octopus_mascot.py  05_video_components.py  06_full_mini_episode.py  README.md
scenes/: __init__.py  _template.py  activation_functions.py  attention_mechanism.py  backpropagation.py  cnn_explained.py  gradient_descent.py  intro.py  loss_functions.py  neural_network_basics.py  outro.py
series/DL/01_backpropagation/: config.yaml  scene.py
series/DL/02_activation_functions/: config.yaml  scene.py
series/DL/03_cnn_explained/: config.yaml  scene.py
series/DL/04_attention_mechanism/: config.yaml  scene.py
series/ML/01_neural_network_basics/: config.yaml  scene.py
series/ML/02_gradient_descent/: config.yaml  scene.py
series/ML/03_loss_functions/: config.yaml  scene.py
shared/: __init__.py  math_helpers.py  ml_components.py  nn_visualizer.py
tools/: assets.py  export.py  interactive.py  new_episode.py
(+3 files in other folders)
